test/unit/cxtm/jtm/invalid/association-noroles2.jtm
{"version": "1.0",
 "item_type": "topicmap",
 "associations":[
    {"type": "ii:#assoctype"}
]}
